# DSS_Assignment

./: .gitignore  DSS_Assignment.sln  DSS_Assignment.vcxproj  DSS_Assignment.vcxproj.filters  Notes.md  README.md  workspace.code-workspace
extra/: loading.psd
extra/json/: json_data_buffer.c
resources/: loading.psd  sample_game.json
resources/json/: json_data_buffer.c  json_data_buffer.h  json_deserializer.c  json_deserializer.h  json_serialize_deserialize_types.h  json_serializer.c  json_serializer.h
src/: CMakeLists.txt  curl_lib.c  curl_lib.h  display.c  display.h  display_types.h  enum_label.c  enum_label.h  errors.h  game_data_parser.c  game_data_parser.h  json_data_buffer.h  json_deserialization.c  json_deserialization.h  json_deserializer.h  json_serialize_deserialize_types.h  main.c  utility.h
src/display/: drawable.h  game_info.c  game_info.h  image.c  image.h  text.c  text.h
src/inc/: shared_data_types.h
src/jsmn/: jsmn.h
